--- a/TODO
+++ b/TODO
@@ -1,5 +1,19 @@
-- R/zzz.R : Remove the  '%*%'  base assignInNamespace hack --
-  	  as soon as R's  '%*%'  is properly generic  // or itself calls the generic kronecker()
+##-*- mode: org -*-
+
+- Look at Paul Bailey's problem -- CHOLMOD error (even seg.fault for him)
+  --> ~/R/MM/Pkg-ex/Matrix/sparseOrderedLogit.R
+
+- BunchKaufman()'s result is not really useful yet {but it is used on C
+  level e.g. for solve(<dsyMatrix>).   Should define  expand() method or
+  similar, see man/BunchKaufman-methods.Rd and R/dsyMatrix.R (at end).
+
+- R/zzz.R : Remove the  '%x%'  base assignInNamespace hack --
+  	  as soon as R's  '%x%'  is properly generic  // or itself calls the generic kronecker()
+
+----------------------------------------
+
+- Investigate the "band changing (and getting) ideas  'band<-' etc,
+  as per posts on R-devel ......(which ones ????)_____________________ <<<
 
 - Check for DimNames propagation in coercion and other operations.
 
