--- a/po/R-de.po
+++ b/po/R-de.po
@@ -5,10 +5,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: R 2.10.0 / matrix 0.999375-26\n"
+"Project-Id-Version: R 2.14.0 / matrix 1.0-0\n"
 "Report-Msgid-Bugs-To: bugs@r-project.org\n"
-"POT-Creation-Date: 2011-08-06 17:35\n"
-"PO-Revision-Date: 2009-06-11 12:23+0100\n"
+"POT-Creation-Date: 2011-10-14 21:52\n"
+"PO-Revision-Date: 2011-10-14 15:23+0200\n"
 "Last-Translator: Chris Leick <c.leick@vollbio.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "Language: de\n"
@@ -89,9 +89,8 @@ msgid "not a symmetric matrix; consider forceSymmetric() or symmpart()"
 msgstr ""
 "keine symmetrische Matrix. Erwägen Sie forceSymmetric() oder symmpart()"
 
-#, fuzzy
 msgid "Matrix-internal error in <CsparseM>[i,,d]; please report"
-msgstr "Matrixinterner Fehler in <sparseM>[i,,d]. Bitte berichten"
+msgstr "Matrixinterner Fehler in <CsparseM>[i,,d]. Bitte berichten"
 
 msgid "nothing to replace with"
 msgstr "nichts zu ersetzen mit"
@@ -104,14 +103,16 @@ msgid "too many replacement values"
 msgstr "zu viele Austauschwerte"
 
 msgid "i1[1] == 0 ==> C-level verbosity will not happen!"
-msgstr ""
+msgstr "i1[1] == 0 ==> C-Ebene wird nicht detailliert sein!"
 
 msgid "using\t \"old code\" part in  Csparse subassignment"
-msgstr ""
+msgstr "benutzt wird\t »alter Kode«-Teil in Csparse-Unterzuweisung"
 
 msgid ""
 "Cholesky(<nsparse...>) -> *symbolic* factorization -- not yet implemented"
 msgstr ""
+"Cholesky(<nsparse...>) -> *symbolische* Faktorisierung – noch nicht "
+"implementiert"
 
 msgid "Not a valid format"
 msgstr "Kein gültiges Format"
@@ -175,6 +176,8 @@ msgstr "»%s()« ist noch nicht implementiert für Darstellung »%s«"
 
 msgid "trimmed mean of 'sparseVector' -- suboptimally using as.numeric(.)"
 msgstr ""
+"getrimmter Mittelwert von 'sparseVector' – suboptimalerweise wird as.numeric"
+"(.) benutzt"
 
 msgid "'V' is not a square matrix"
 msgstr "»V« ist keine quadratische Matrix"
@@ -214,6 +217,9 @@ msgid ""
 "\t it is currently defined for sparseMatrix only; consider using chol() "
 "instead"
 msgstr ""
+"Cholesky(A) für 'A' der Klasse \"%s\" aufgerufen;\n"
+"\t es ist derzeit nur für sparseMatrix definiert; erwägen Sie, chol() zu "
+"benutzen "
 
 msgid "'lag' and 'differences' must be integers >= 1"
 msgstr "»lag« und »differences« müssen Ganzzahlen >=1 sein"
@@ -277,14 +283,12 @@ msgstr "ineffiziente Methode für »- e1« benutzt"
 msgid "<Matrix>"
 msgstr "<Matrix>"
 
-#, fuzzy
 msgid "(0) is undefined"
-msgstr "numeric(0) ist undefiniert"
+msgstr "(0) ist undefiniert"
 
-#, fuzzy
 msgid "internal bug in \"Compare\" method (Cmp.Mat.atomic); please report"
 msgstr ""
-"interner Fehler in der »Compare«-Methode für »dMatrix«. Bitte berichten"
+"interner Fehler in der \"Compare\"-Methode (Cmp.Mat.atomic). Bitte berichten"
 
 msgid "Matrices must have same number of rows for arithmetic"
 msgstr "Matrizen müssen für Arithmetik die gleiche Anzahl Zeilen haben"
@@ -298,9 +302,9 @@ msgstr "Länge des zweiten arg passt nicht zur Dimension des ersten"
 msgid "length of 1st arg does not match dimension of 2nd"
 msgstr "Länge des ersten arg passt nicht zur Dimension des zweiten"
 
-#, fuzzy
 msgid "internal bug in \"Logic\" method (.Logic.Mat.atomic); please report"
-msgstr "interner Fehler in der »Logic«-Methode für »lMatrix«. Bitte berichten"
+msgstr ""
+"interner Fehler in der \"Logic\"-Methode (.Logic.Mat.atomic). Bitte berichten"
 
 msgid "numeric(<too-long>)"
 msgstr "numeric(<zu lang>)"
@@ -313,7 +317,7 @@ msgstr ""
 "\tist kein Vielfaches der kürzeren Objektlänge"
 
 msgid "(0)"
-msgstr ""
+msgstr "(0)"
 
 msgid "<Matrix> is undefined"
 msgstr "<Matrix> ist undefiniert"
@@ -325,7 +329,7 @@ msgid "is not a multiple of shorter object length"
 msgstr "ist kein Vielfaches der kürzeren Objektlänge"
 
 msgid "dim [product %d] do not match the length of object [%d]"
-msgstr ""
+msgstr "dim [produkt %d] passt nicht zur Länge des Objekts [%d]"
 
 msgid "invalid class:"
 msgstr "ungültige Klasse:"
@@ -344,7 +348,7 @@ msgid "index larger than maximal"
 msgstr "Index größer als maximal"
 
 msgid "logical subscript too long (%d, should be %d)"
-msgstr ""
+msgstr "logisches Subskript zu lang (%d, sollte %d sein)"
 
 msgid "no 'dimnames[[.]]': cannot use character indexing"
 msgstr "keine »dimnames[[.]]«: Zeichenindexierung kann nicht benutzt werden"
@@ -352,9 +356,8 @@ msgstr "keine »dimnames[[.]]«: Zeichenindexierung kann nicht benutzt werden"
 msgid "invalid character indexing"
 msgstr "ungültige Zeichenindexierung"
 
-#, fuzzy
 msgid "Matrix-internal error in <TsparseM>[i,,d]; please report"
-msgstr "Matrixinterner Fehler in <sparseM>[i,,d]. Bitte berichten"
+msgstr "Matrixinterner Fehler in <TsparseM>[i,,d]; Bitte berichten"
 
 msgid "FIXME: NOT YET FINISHED IMPLEMENTATION"
 msgstr "ZU ERLEDIGEN: NOCH NICHT ABGESCHLOSSENE IMPLEMENTIERUNG"
@@ -370,12 +373,14 @@ msgstr "interner Fehler: Matrix »i« in replTmat(): Bitte berichten"
 
 msgid "x[.] <- val: x is \"%s\", val not in {TRUE, FALSE} is coerced%s."
 msgstr ""
+"x[.] <- val: x ist \"%s\", val nicht in {TRUE, FALSE} wird umgewandelt%s"
 
 msgid "x[.,.] <- val: x is \"%s\", val not in {TRUE, FALSE} is coerced%s."
 msgstr ""
+"x[.,.] <- val: x ist \"%s\", val nicht in {TRUE, FALSE} wird umgewandelt%s"
 
 msgid "x[.,.] <- val : x being coerced from Tsparse* to CsparseMatrix"
-msgstr ""
+msgstr "x[.,.] <- val : x wird von Tsparse* in CsparseMatrix umgewandelt"
 
 msgid "nargs() = %d should never happen; please report."
 msgstr "nargs() = %d sollte niemals vorkommen. Bitte berichten."
@@ -390,59 +395,54 @@ msgid "duplicate ij-entries in 'Matrix[ ij ] <- value'; using last"
 msgstr "doppelte ij-Einträge in »Matrix[ IJ ] <- value«. Letzter wird benutzt"
 
 msgid "'force' must be (coercable to) TRUE or FALSE"
-msgstr ""
+msgstr "'force' muss (mindestens umwandelbar nach) TRUE oder FALSE sein"
 
 msgid "invalid (to - from)/by in seq(.)"
-msgstr ""
+msgstr "unzulässiges (to - from)/by in seq(.)"
 
 msgid "wrong sign in 'by' argument"
-msgstr ""
+msgstr "falsches Vorzeichen im Argument 'by'"
 
 msgid "'by' argument is much too small"
-msgstr ""
+msgstr "Argument 'by' ist zu klein"
 
-#, fuzzy
 msgid "length must be non-negative number"
-msgstr "»lwd« muss NULL oder nicht negativ numerisch sein"
+msgstr "Länge muss eine nicht negative Zahl sein"
 
-#, fuzzy
 msgid "too many arguments"
-msgstr "zu viele Austauschwerte"
+msgstr "zu viele Argumente"
 
 msgid "c(<abIndex>,..) of different kinds, coercing all to 'rleDiff'"
 msgstr ""
+"c(<abIndex>,..) von unterschiedlichen Arten, alle  werden in 'rleDiff' "
+"umgewandelt"
 
 msgid "<abIndex>[i]  is not yet implemented"
 msgstr "<abIndex>[i] ist noch nicht implementiert"
 
-#, fuzzy
 msgid "all(<abIndex>) is not yet implemented"
-msgstr "<abIndex>[i] ist noch nicht implementiert"
+msgstr "all(<abIndex>) ist noch nicht implementiert"
 
-#, fuzzy
 msgid "sum(<abIndex>) is not yet implemented"
-msgstr "<abIndex>[i] ist noch nicht implementiert"
+msgstr "sum(<abIndex>) ist noch nicht implementiert"
 
-#, fuzzy
 msgid "prod(<abIndex>) is not yet implemented"
-msgstr "<abIndex>[i] ist noch nicht implementiert"
+msgstr "prod(<abIndex>) ist noch nicht implementiert"
 
 msgid "not yet implemented"
 msgstr "noch nicht implementiert"
 
 msgid "x / 0 for an <abIndex> x with sign-change"
-msgstr ""
+msgstr "x / 0 für ein <abIndex> x mit Vorzeichenwechsel"
 
 msgid "no longer representable as 'rleDiff'"
-msgstr ""
+msgstr "nicht länger als »rleDiff« darstellbar"
 
-#, fuzzy
 msgid "<abIndex>  -->  <seqMat>  is not yet implemented"
-msgstr "<abIndex>[i] ist noch nicht implementiert"
+msgstr "<abIndex> --> <seqMat> ist noch nicht implementiert"
 
-#, fuzzy
 msgid "<seqMat>  -->  <abIndex>  is not yet implemented"
-msgstr "<abIndex>[i] ist noch nicht implementiert"
+msgstr "<seqMat> --> <abIndex> ist noch nicht implementiert"
 
 msgid "'diagonals' matrix must have %d columns (= length(k) )"
 msgstr "»diagonals«-Matrix muss %d Spalten haben (= length(k) )"
@@ -463,37 +463,33 @@ msgstr "die  %d-te (Unter)-Diagonale (k = %d) ist %s"
 msgid "too short; filling with NA's"
 msgstr "zu kurz. Wird mit NAs gefüllt"
 
-msgid "cbind2() method for (%s,%s) not-yet defined"
-msgstr "cbind2()-Methode für (%s,%s) noch nicht definiert"
-
-#, fuzzy
 msgid "'A' must be a square matrix"
-msgstr "»V« ist keine quadratische Matrix"
+msgstr "'A' muss eine quadratische Matrix sein"
 
 msgid "must either specify 'A' or the functions 'A.x' and 'At.x'"
-msgstr ""
+msgstr "muss entweder 'A' angeben oder die Funktionen 'A.x' und 'At.x'"
 
 msgid "when 'A' is specified, 'A.x' and 'At.x' are disregarded"
-msgstr ""
+msgstr "wenn 'A' angegeben wurde, werden 'A.x' und 'At.x' nicht berücksichtigt"
 
-#, fuzzy
 msgid "not converged in"
-msgstr "nearPD() näherte sich nicht an in"
+msgstr "nicht konvergiert in"
 
 msgid "iterations"
 msgstr "Iterationen"
 
 msgid "hit a cycle (1) -- stop iterations"
-msgstr ""
+msgstr "auf einen Zyklus getroffen (1) – Iterationen stoppen"
 
 msgid "hit a cycle (2) -- stop iterations"
-msgstr ""
+msgstr "auf einen Zyklus getroffen (2) – Iterationen stoppen"
 
 msgid "not enough new vecs -- stop iterations"
-msgstr ""
+msgstr "nicht genügend neue Vektoren – Iterationen stoppen"
 
 msgid "\"dMatrix\" object with NAs cannot be coerced to \"nMatrix\""
-msgstr "»dMatrix«-Objekt mit NAs kann nicht in »nMatrix« umgewandelt werden"
+msgstr ""
+"\"dMatrix\"-Objekt mit NAs kann nicht in \"nMatrix\" umgewandelt werden"
 
 msgid "diagonalMatrix in .dense2C() -- should never happen, please report!"
 msgstr ""
@@ -524,18 +520,17 @@ msgstr "»lwd« muss NULL oder nicht negativ numerisch sein"
 msgid "'x' has invalid data type"
 msgstr "»x« hat ungültigen Datentyp"
 
-#, fuzzy
 msgid "length(x) must be either 1 or #{cols}"
-msgstr "length(x) muss 1 oder n sein"
+msgstr "length(x) muss 1 oder #{cols} sein"
 
 msgid "some arguments are not matrices"
 msgstr "einige Argumente sind keine Matrizen"
 
 msgid "'"
-msgstr "»"
+msgstr "'"
 
 msgid "' kind not yet implemented"
-msgstr "«-Art noch nicht implementiert"
+msgstr "'-Art noch nicht implementiert"
 
 msgid "non-square matrix"
 msgstr "nicht quadratische Matrix"
@@ -586,14 +581,13 @@ msgid "\"lMatrix\" object with NAs cannot be coerced to \"nMatrix\""
 msgstr "»lMatrix«-Objekt mit NAs kann nicht zu »nMatrix« umgewandelt werden"
 
 msgid "Matrix seems negative semi-definite"
-msgstr ""
+msgstr "Matrix scheint negativ semidefinit zu sein"
 
 msgid "nearPD() did not converge in"
 msgstr "nearPD() näherte sich nicht an in"
 
-#, fuzzy
 msgid "cannot coerce 'NA's to \"nsparseMatrix\""
-msgstr "Kann NAs nicht in »nsparseVector« umwandeln"
+msgstr "'NA's können nicht in \"nsparseMatrix\" umgewandelt werden"
 
 msgid "temporarily disabled"
 msgstr "zeitweise ausgeschaltet"
@@ -610,28 +604,27 @@ msgstr "die Anzahl der Nicht-Null-Einträge weicht von nrow(.) ab"
 msgid "must have exactly one non-zero entry per row"
 msgstr "muss exakt einen Nicht-Null-Eintrag pro Zeile haben"
 
-#, fuzzy
 msgid "replacing \"pMatrix\" entries is not allowed, as rarely sensible"
-msgstr "teilweises Ersetzen von »pMatrix«-Einträgen ist nicht vernünftig"
+msgstr ""
+"Ersetzen von \"pMatrix\"-Einträgen ist nicht erlaubt, da selten sinnvoll"
 
 msgid "not-yet-implemented method for <%s> %%*%% <%s>"
 msgstr "noch nicht implementierte Methode für <%s> %%*%% <%s>"
 
 msgid "model frame and formula mismatch in model.matrix()"
-msgstr ""
+msgstr "Model-Frame und Formel passen nicht zusammen in model.matrix()"
 
 msgid "variable '%s' converted to a factor"
-msgstr ""
+msgstr "Variable '%s' konvertiert in einen Faktor"
 
-#, fuzzy
 msgid "invalid 'contrasts.arg' argument"
-msgstr "ungültige »col.names«-Zeichenkette:"
+msgstr "unzulässiges 'contrasts.arg' Argument"
 
 msgid "variable '%s' is absent, its contrast will be ignored"
-msgstr ""
+msgstr "Variable '%s' fehlt, ihr Kontrast wird irgnoriert"
 
 msgid "exactly one of 'i', 'j', or 'p' must be missing from call"
-msgstr "exakt eins von »i«, »j« oder »p« muss vom Aufruf fehlen"
+msgstr "exakt eins von 'i', 'j' oder 'p' muss vom Aufruf fehlen"
 
 msgid "'p' must be a non-decreasing vector (0, ...)"
 msgstr "»p« muss ein nicht abnehmender Vektor (0, ...) sein"
@@ -640,15 +633,14 @@ msgid "NA's in (i,j) are not allowed"
 msgstr "NAs sind in (i,j) nicht erlaubt"
 
 msgid "symmetric matrix must be square"
-msgstr ""
+msgstr "symmetrische Matrix muss quadratisch sein"
 
 msgid "length(i) is not a multiple of length(x)"
 msgstr "length(i) ist kein Vielfaches von length(x)"
 
-# http://www.woxikon.de/deutsch-englisch/incidence matrix.php
 msgid "only square matrices can be used as incidence matrices for graphs"
 msgstr ""
-"nur quadratische Matrizen können als Verbindungsmatrizen für Graphen benutzt "
+"nur quadratische Matrizen können als Inzidenzmatrizen für Graphen benutzt "
 "werden"
 
 msgid "Matrix-internal error in <sparseM>[i,,d]; please report"
@@ -688,32 +680,35 @@ msgstr ""
 msgid "cannot coerce 'NA's to \"nsparseVector\""
 msgstr "Kann NAs nicht in »nsparseVector« umwandeln"
 
-#, fuzzy
 msgid "'x' must inherit from \"sparseVector\""
-msgstr "»x« muss sparseMatrix sein"
+msgstr "'x' muss von \"sparseVector\" geerbt sein"
 
 msgid "'ncol' must be >= 0"
-msgstr "»ncol« muss >= 0 sein"
+msgstr "'ncol' muss >= 0 sein"
 
 msgid "'nrow' must be >= 0"
-msgstr "»nrow« muss >= 0 sein"
+msgstr "'nrow' muss >= 0 sein"
 
 msgid "'ncol' is not a factor of length(x)"
 msgstr "»ncol« ist kein Faktor der length(x)"
 
 msgid "'nrow' is not a factor of length(x)"
-msgstr "»nrow« ist kein Faktor der length(x)"
+msgstr "'nrow' ist kein Faktor der length(x)"
 
 msgid "too large index i > n ="
-msgstr ""
+msgstr "zu großer Index i > n ="
 
-#, fuzzy
 msgid ""
 "index must be numeric, logical or sparseVector for indexing sparseVectors"
-msgstr "Index muss numerisch oder logisch für »sparseVector«-Indexierung sein"
+msgstr ""
+"Index muss numerisch, logisch oder sparseVector sein, um sparseVector zu "
+"indizieren"
 
 msgid "'times >= 0' is required"
-msgstr "»times >= 0« wird benötigt"
+msgstr "'times >= 0' wird benötigt"
+
+#~ msgid "cbind2() method for (%s,%s) not-yet defined"
+#~ msgstr "cbind2()-Methode für (%s,%s) noch nicht definiert"
 
 #~ msgid "not yet implemented for packed class"
 #~ msgstr "noch nicht für gepackte Klasse implementiert"
