--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2014-01-28  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/products.R: matrix products overhauled; should work with sparseVectors;
+	speedup of crossprod(v, <sparseM>), thanks to nudge by Niels Richard Hansen.
+	* man/matrix-products.Rd: all matrix products documented in one file.
+	* tests/matprod.R: more extensive testing
+
+2014-01-20  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* DESCRIPTION (Version): 1.1-2
+
+	* NAMESPACE: export fast power-user coercion utilities
+	.dsy2mat(), .dxC2mat(), .T2Cmat(), ..2dge().
+
 2013-12-23  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/dgTMatrix.R (image): (xlim, ylim) get a slightly changed
